# event-bus

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Demo/: main.cpp
Source/: delegate.hpp  event.hpp  event_bus.hpp  util.hpp
